# StarletControls

./: CMakeLists.txt  README.md
inc/StarletControls/: cameraController.hpp  controller.hpp  inputManager.hpp  keyboardManager.hpp  lightController.hpp  modelController.hpp  mouseManager.hpp
src/: cameraController.cpp  inputManager.cpp  keyboardManager.cpp  modelController.cpp  mouseManager.cpp
